@@ -345,6 +345,17 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td bgcolor="#ddddff">
+		$g_strip_bare_lf
+	</td>
+	<td bgcolor="#ffffff">
+		Some Mail transfer agents (MTAs) don't like bare linefeeds... or they take good input and create bare linefeeds.
+		If problems occur when sending mail through your server try turning this OFF
+		<p>
+		More details here: <a href="http://pobox.com/~djb/docs/smtplf.html">http://pobox.com/~djb/docs/smtplf.html</a>
+	</td>
+</tr>
+<tr>
+	<td bgcolor="#ddddff">
 		$g_use_phpMailer
 	</td>
 	<td bgcolor="#ffffff">
