@@ -68,6 +68,7 @@ Mantis
  * Added jump to bug form.
  * Added core_proj_user_API.php.
  * Added make_lf_crlf() to remove bare line feeds.
+ * Added g_strip_bare_lf to toggle use of make_lf_crlf().
  * Added priority reporting on the report form for developers.
  * Removed access_min and access threshold concepts from the user and project management.
  * Removed extra "echo" in news archive page.
